--- a/global.css
+++ b/global.css
@@ -13,3 +13,9 @@ p {
     color: #293241;
     font-family: 'Montserrat' sans-serif;
 }
+
+main {
+    margin-top: 125px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
