Added better UI for mobile: - Screen scale - Quote is noticable on mobile - Index page is now more organized
As well as:
- Fixed navbar bug where bootstrap would "un-center" it.

--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -5,7 +5,7 @@ nav {
 
     left: 0;
     top: 0;
-    width: 100%;
+    width: 100vw;
     display: flex;
     background-color: #293241;
     justify-content: center;
