--- a/styles/decorative-blobs.css
+++ b/styles/decorative-blobs.css
@@ -26,11 +26,12 @@
     top: -35px;
 }
 
-@media (min-width: 450px) {
+@media (max-width: 600px) {
     #index-blob1 {
         top: 0;
         right: 0;
 
-        width: 500px;
+        width: 400px;
+        height: 200px;
     }
 }
